--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sbu-101-website",
-  "version": "0.1.0",
+  "name": "rocky43007.github.io",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@popperjs/core": "^2.11.8",
+    "framer-motion": "^6.5.1",
+    "next": "^14.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-snap-carousel": "^0.3.2",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "@types/node": "20.4.2",
+    "@types/react": "^18.2.39",
+    "autoprefixer": "^10.4.16",
+    "eslint": "8.15.0",
+    "eslint-config-next": "^13.5.6",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "4.8.4"
   }
 }
