--- a/package.json
+++ b/package.json
@@ -9,25 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@popperjs/core": "^2.11.8",
     "framer-motion": "^6.5.1",
-    "next": "^14.0.3",
+    "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-snap-carousel": "^0.3.2",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
-    "@types/react": "^18.2.39",
+    "@types/react": "^18.2.42",
     "autoprefixer": "^10.4.16",
     "eslint": "8.15.0",
     "eslint-config-next": "^13.5.6",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "typescript": "4.8.4"
   }
 }
